--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
@@ -39,12 +40,20 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
-  --color-darkblue: #001524;
+  --color-sgreen: #1ed760;
+  --color-shgreen: #3be477;
+  --color-darkblue: #14213d;
   --color-greenblue: #15616D;
-  --color-beige: #FFECD1;
-  --color-corange: #FF7D00;
+  --color-lighterblue: #1e2749;
+  --color-lblue: #ABDADC;
+  --color-cpurple: #6E026F;
+  --color-beige: #F1E6C9;
+  --color-yy: #fca311;
+  --color-grey: #e5e5e5;
+  --color-corange: #FA891A;
   --color-cred: #78290F;
 }
+
 
 :root {
   --radius: 0.625rem;
@@ -120,8 +129,9 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
-    @apply bg-beige;
+    @apply bg-gradient-to-t from-beige to-lblue;
   }
 }
